# sigil

./: .dockerignore  .env.example  .gitignore  .gitlab-ci-template.yml  .npmignore  .sigilignore  CHANGELOG.md  CHARTER.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEPLOY_AUTH0_TO_AZURE.md  Dockerfile  Dockerfile.api  Dockerfile.bot  Dockerfile.classification  Dockerfile.cli  ECOSYSTEM.md  FORGE_ANALYTICS_IMPLEMENTATION.md  FORGE_FIX_ANALYSIS.md  FORGE_FIX_README.md  FORGE_SECURITY_AUDIT_REPORT.md  FORGE_TEST_VALIDATION_REPORT.md  GITHUB_OAUTH_QUICKSTART.md  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  Makefile  NOMARK.md  PACKAGE_MANAGER_IMPLEMENTATION.md  PHASE2_READY.md  PRODUCTION_READINESS_REPORT.md  QUICK_START.md  README.md  ROADMAP.md  SECURITY.md  SIGIL-DISTRIBUTION-ROADMAP.md  SIGNATURE_SYSTEM_README.md  (+35 more)
.github/: action-entrypoint.sh
.nomark/: graph.json  harness-version.json  index.json  instinct-lineage.md  resources.json  skill-config.json
.well-known/: agent-card.json
Formula/: sigil.rb
api/: .env.example  Dockerfile  __init__.py  auth.py  background_job_resilience.py  circuit_breakers.py  config.py  database.py  database_resilience.py  errors.py  exceptions.py  gates.py  graceful_degradation.py  llm_config.py  llm_models.py  main.py  models.py  monitoring.py  openapi.yaml  permissions.py  pytest-pro.ini  rate_limit.py  requirements.txt  resilience_middleware.py  retry.py  schema.sql  seed_data.py  usage_metrics.py
archive/: FORGE_ARCHIVAL_README.md  PROVENANCE-production_d1_d4_scorecard.md
blog/: 01-why-we-built-sigil.md  02-anatomy-of-a-supply-chain-attack.md  03-six-phases-of-detection.md  04-securing-ai-agents-with-mcp.md  05-sigil-vs-snyk-vs-socket.md  (+4 more)
cli/: Cargo.toml  DEPLOYMENT_FINAL_STATUS.md
cli/.nomark/: graph.json
cli/src/: api.rs  cache.rs  diff.rs  explain.rs  ledger.rs  main.rs  output.rs  quarantine.rs
cli/src/corpus/: engine.rs  loader.rs  mod.rs  schema.rs  signing.rs
cli/src/feeds/: enrichment.rs  mod.rs  osv.rs
cli/src/policy/: generate.rs  mod.rs  schema.rs
cli/src/provenance/: mod.rs
cli/src/provider/: mod.rs
cli/src/sandbox/: container.rs  mod.rs  safe_run.rs
cli/src/sbom/: mod.rs  parsers.rs
cli/src/scanner/: cloud_sigs.rs  context.rs  mod.rs  normalize.rs  phases.rs  scoring.rs
cli/tests/: explain.rs
(+1100 files in other folders)
