[package]
name = "sigil"
version = "0.1.0"
edition = "2021"
description = "Automated security auditing for AI agent code"
license = "Apache-2.0"

[[bin]]
name = "sigil"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
colored = "2"
indicatif = "0.17"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
