[package]
name = "sigil-cli"
version = "1.0.4"
edition = "2021"
description = "Automated security auditing for AI agent code - quarantine-first scanning for pip, npm, git repos, and MCP servers"
license = "Apache-2.0"
repository = "https://github.com/NOMARJ/sigil"
homepage = "https://sigilsec.ai"
keywords = ["security", "scanning", "supply-chain", "malware", "ai-agent"]
categories = ["command-line-utilities", "development-tools"]
readme = "../README.md"
authors = ["NOMARJ <hello@sigilsec.ai>"]

[[bin]]
name = "sigil"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
colored = "2"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
zip = "0.6"
flate2 = "1"
tar = "0.4"
